# serv

./: .gitignore
back/: alembic.ini  pyproject.toml  requirements.txt
back/app/: main.py
back/app/controller/: auth_routers.py
back/app/core/: config.py  database.py
back/app/model/: base.py  base_model.py  role.py  user.py
back/app/schema/: user_schema.py
back/app/service/: user_manager.py
back/migrations/: env.py
back/migrations/versions/: 750dc2147b4b_initial_migrations.py
